<resources>
    <string name="app_name">Holi App</string>
    <string name="pokhari_holi_2024">Pokhari Holi 2024</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_amount">Enter amount</string>
    <string name="add_record">Add Record</string>
    <string name="design_by_rahul_joshi">Design By Rahul Joshi</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="delete_record">Delete Record</string>
    <string name="edit_record">Edit Record</string>
    <string name="show_record">Show Record</string>
    <string name="total_amount">Total amount</string>
    <string name="enter_updated_full_name">Enter updated full name</string>
    <string name="enter_updated_amount">Enter updated amount</string>
    <string name="update_record">Update Record</string>
    <string name="update">Update</string>
    <string name="no">No</string>
    <string name="position">Position</string>
    <string name="more_options">More Options</string>
</resources>