<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heading"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:text="@string/update_record"
        android:shadowColor="#00FF00"
        android:shadowDx="2"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_marginTop="50dp"
        android:id="@+id/updatedName"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/enter_updated_full_name"
        android:minHeight="50dp"
        android:ems="20"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/updatedAmount"
        android:layout_below="@+id/updatedName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:inputType="number"
        android:hint="@string/enter_updated_amount"
        android:minHeight="50dp"
        android:ems="20"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/update"
        android:text="@string/update"
        android:layout_below="@+id/updatedAmount"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/black"
        android:textSize="22sp"
        android:shadowColor="#00FF00"
        android:textColor="#00FF00"
        android:shadowDx="2"
        android:shadowDy="5"
        android:shadowRadius="10"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/noUpdate"
        android:text="@string/no"
        android:layout_below="@+id/updatedAmount"
        android:layout_alignParentStart="true"
        android:backgroundTint="@color/black"
        android:textSize="22sp"
        android:shadowColor="#FF0000"
        android:textColor="#FF0000"
        android:shadowDx="2"
        android:shadowDy="5"
        android:shadowRadius="10"/>

</RelativeLayout>