<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:padding="8dp"
        android:background="@drawable/holi_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokhari_holi_2024"
            android:textSize="42sp"
            android:textStyle="bold"
            android:id="@+id/holiName"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameField"
            android:layout_below="@id/holiName"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_full_name"
                android:id="@+id/fullName"
                android:minHeight="50dp"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/amountField"
            android:layout_below="@id/nameField"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_amount"
                android:id="@+id/amount"
                android:minHeight="50dp"
                android:inputType="number"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/addRecord"
            android:layout_below="@id/amountField"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/add_record"
            android:backgroundTint="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="11dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/showRecord"
            android:text="@string/show_record"
            android:layout_below="@+id/addRecord"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/black"
            android:textSize="22sp"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/developerName"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/design_by_rahul_joshi"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </RelativeLayout>
</layout>