<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecordsActivity"
        android:background="@drawable/holi_back"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/developerName"
            android:layout_centerHorizontal="true"
            android:text="@string/design_by_rahul_joshi"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokhari_holi_2024"
            android:textSize="32sp"
            android:textStyle="bold"
            android:id="@+id/holiName"
            android:layout_below="@+id/developerName"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalAmount"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/holiName"
            android:hint="@string/total_amount"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_margin="11dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView"
            android:layout_below="@id/totalAmount"
            android:layout_marginTop="11dp"/>

    </RelativeLayout>
</layout>
