<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="11dp"
    app:cardBackgroundColor="@color/semi_transparent_black"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp">

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main">

        <TextView
            android:id="@+id/position"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:hint="@string/position"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fName"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_margin="20dp"
            android:hint="@string/name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/amount"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/amount"
            android:textSize="18sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu"
            android:backgroundTint="@color/semi_transparent_black"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:contentDescription="@string/more_options" />
    </LinearLayout>-->

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/zeroPart">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deleteRecord"
                android:src="@drawable/delete_img"
                android:backgroundTint="@color/semi_transparent_red"
                android:layout_weight="1"
                android:contentDescription="@string/delete_record" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editRecord"
                android:src="@drawable/edit_img"
                android:backgroundTint="@color/semi_transparent_green"
                android:layout_weight="1"
                android:contentDescription="@string/edit_record" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/firstPart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/zeroPart"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fNameLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/full_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fName"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:hint="@string/name"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondPart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstPart"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amountLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/amount"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/amount"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
